--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,18 +3,18 @@
     "short_name": "PWA App",
     "icons": [
       {
-        "src": "/img/192.png",
+        "src": "/icons/192.png",
         "sizes": "192x192",
         "type": "image/png",
         "purpose": "any maskable"
       },
       {
-        "src": "/img/384.png",
+        "src": "/icons/384.png",
         "sizes": "384x384",
         "type": "image/png"
       },
       {
-        "src": "/img/512.png",
+        "src": "/icons/512.png",
         "sizes": "512x512",
         "type": "image/png"
       }
