--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.2",
+    "html5-qrcode": "^2.3.8",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
