--- a/package.json
+++ b/package.json
@@ -10,10 +10,19 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.2",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "html5-qrcode": "^2.3.8",
+    "lucide-react": "^0.316.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recharts": "^2.11.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.8.9"
   },
   "devDependencies": {
     "@types/node": "^20",
