--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.2",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "html5-qrcode": "^2.3.8",
