--- a/package.json
+++ b/package.json
@@ -10,22 +10,30 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.2",
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
+    "flowbite": "^2.2.1",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.316.0",
     "next": "14.1.0",
     "react": "^18",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.3",
     "recharts": "^2.11.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.8.9"
+    "vaul": "^0.8.9",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
